# Avalonix

./: .gitignore  App.axaml  App.axaml.cs  Avalonix.csproj  CONTRIBUTING.md  Program.cs  README.md  Readme.md  Release  ViewLocator.cs  app.manifest  build.bat  cloc.sh  flake.nix  setup.iss  shell.nix
Controls/: TrackListItem.axaml  TrackListItem.axaml.cs
Copyrights/: BASS LICENSE  BASS.NET LICENSE  LICENSES
Migrations/: 20251123071316_InitialCreate.cs  (+2 more)
avalonix/src-tauri/: Cargo.toml  tauri.conf.json  useful commands.md
avalonix/src-tauri/avalonix-api/: Cargo.toml
avalonix/src-tauri/avalonix-api/src/: db.rs  disk_manager.rs  lib.rs  logger.rs  playable.rs  playboxes.rs  settings_manager.rs  uri_create.rs  useful_traits.rs  utils.rs
avalonix/src-tauri/avalonix-api/src/audio/: media_player.rs
avalonix/src-tauri/avalonix-api/src/media/: metadata.rs  track.rs
avalonix/src-tauri/avalonix-api/src/playable/: album.rs  albums_container.rs  artists_container.rs  filter_data.rs  library_part.rs  play_queue.rs  playboxes.rs  track.rs  tracks_container.rs
avalonix/src-tauri/avalonix-api/src/playboxes/: album.rs  albums_container.rs  artists_container.rs  play_queue.rs  playbox.rs  playboxes.rs  tracks_container.rs
avalonix/src-tauri/avalonix-api/src/useful_traits/: compress_data.rs
avalonix/src-tauri/avalonix_api/: Cargo.toml
avalonix/src-tauri/avalonix_api/bindings/: AlbumFilterMetadata.ts  PerformerFilterMetadata.ts  TrackFilterMetadata.ts
avalonix/src-tauri/avalonix_api/src/: api.rs  discord_rpc.rs  disk.rs  events.rs  lib.rs  logger.rs  media.rs  metadata.rs  mutex_work.rs  tests.rs  utils.rs
avalonix/src-tauri/avalonix_api/src/disk/: db.rs  disk_manager.rs  disk_paths.rs  loaded_from.rs  settings.rs
avalonix/src-tauri/avalonix_api/src/disk/user/: settings.rs
avalonix/src-tauri/avalonix_api/src/media/: album.rs  audio_file.rs  media_player.rs  media_trait.rs  performer.rs  play_queue.rs  playlist.rs  track.rs  tracks_group.rs
avalonix/src-tauri/avalonix_api/src/metadata/: album_filter_metadata.rs  album_metadata.rs  filter_metadata.rs  performer_filter_metadata.rs  performer_metadata.rs  track_filter_metadata.rs  track_metadata.rs
avalonix/src-tauri/icons/: icon.icns
avalonix/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
avalonix/src-tauri/src/commands/: db_commands.rs  media_player.rs  queue.rs  settings.rs
src/src-tauri/avalonix_api/: Cargo.toml
src/src-tauri/avalonix_api/bindings/: Album.ts
src/src-tauri/avalonix_api/src/: events.rs  lib.rs  media.rs  tests.rs
src/src-tauri/avalonix_api/src/audio/: media_player.rs
src/src-tauri/avalonix_api/src/disk/: db.rs
src/src-tauri/avalonix_api/src/disk/user/: settings.rs  theme.rs
src/src-tauri/avalonix_api/src/media/: album.rs  cover_get.rs  media_trait.rs  performer.rs  play_queue.rs  playable_type.rs  playlist.rs  track.rs
(+341 files in other folders)
