[package]
name = "Avalonix"
version = "0.1.0"
description = "Avalonix is ​​a completely free, open-source audio player. We make it so we'd want to use it ourselves."
authors = ["nokskiy, ruzen"]
edition = "2021"
license = "APACHE OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "avalonix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
avalonix_api = {path = "avalonix_api"}
anyhow = "1.0.102"
tauri-plugin-dialog = "2"
