[package]
name = "avalonix_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
dirs = "6.0.0"
infer = "0.19.0"
lofty = "0.24.0"
rcue = "0.1.3"
rodio = "0.22.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sled = "0.34.7"
walkdir = "2.5.0"
