[package]
name = "avalonix_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
better-sms = "0.1.2"
colored = "3.1.1"
cpal = "0.17.3"
lofty = "0.24.0"
rand = "0.10.1"
rcue = "0.1.3"
rkyv = "0.8.16"
rodio = {version="0.22.2", features = ["symphonia-all"] }
rustc-serialize = "0.3.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sled = "0.34.7"
ts-rs = "12.0.1"
uuid = {version="1.23.2", features=["v4"]}
